Minor alignment issue.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -343,6 +343,10 @@ a i {
   padding-left: 1em;
 }
 
+.pushRight {
+  position: relative;
+  left: .5em;
+}
 
 /* TABLES */
 
